# html2dash

./: .gitignore  LICENSE  README.md  pandas_table.py  pyproject.toml  testapp.py
.github/workflows/: python-publish.yml  python-pytest.yml
docs/: requirements.txt
docs/_src/: api.rst  conf.py  index.rst
examples/: markdown_to_dash.py  pandas_table.py  tabler.html  tabler.py
html2dash/: __init__.py  html2dash.py
tests/: test_basic.py  test_functions.py  utils.py
